es-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-demo
  labels:
    app: es-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es-demo
  template:
    metadata:
      labels:
        app: es-demo
    spec:
      containers:
        - name: es-demo
          image: ghcr.io/wgbh-mla/es-demo:main
          command: ["sleep", "infinity"]
